# wd_grasp

./: .README.md.swp  CMakeLists.txt  README.md  package.xml  scene0.pcd
baxter_scenes/: baxter_pillar.scene
launch/: baxter_15_channels.launch
msg/: GoalConfig.msg
scripts/: get_goal_config.py  pick_and_place.py
src/cluster/: CMakeCache.txt  Makefile  cloud_cluster_0.pcd  cloud_cluster_1.pcd  cloud_cluster_2.pcd  cloud_cluster_3.pcd  cluster_extraction.cpp  cmake_install.cmake
src/publisher/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  publisher.cpp
